--- a/rl-study/src/css/default.less
+++ b/rl-study/src/css/default.less
@@ -1,6 +1,16 @@
-@primarycolor: #208157;
-@secondcolor: lighten(#208157, 10%);
-@secondcolor: #FFA222;
+@primarycolor: #f56a00;
+@secondcolor: #f78e3d;
+@secondcolor: #f04134;
+* {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -o-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  box-sizing: border-box;
+  font-family: "Microsoft YaHei", Helvetica, Roboto, Arial, sans-serif;
+}
 .fade-enter-active, .fade-leave-active {
   transition: opacity .5s
 }
@@ -25,4 +35,75 @@
   -moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 20px rgba(0, 0, 0, 0.1);
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 20px rgba(0, 0, 0, 0.1);
   -o-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 20px rgba(0, 0, 0, 0.1);
+}
+
+.list-wrapper {
+  background-color: #fff;
+  .list-item-wrapper {
+    padding: 12px;
+    display: -webkit-box;
+    -webkit-box-orient: horizontal;
+    -webkit-box-pack: start;
+    -webkit-box-align: start;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-start;
+    border-bottom: 1px solid #e7e7eb;
+    @media (max-width: 400px) {
+      .list-item-content {
+        height: 90px;
+      }
+
+      .list-item-img {
+        width: 120px;
+        height: 90px;
+      }
+    }
+    @media (max-width: 330px) {
+      .list-item-content {
+        height: 75px;
+      }
+
+      .list-item-img {
+        width: 100px;
+        height: 75px;
+      }
+    }
+
+    .list-item-img {
+      position: relative;
+      margin-left: 12px;
+      overflow: hidden;
+      img {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        border-radius: 5px;
+        width: 100%;
+      }
+    }
+    .list-item-content {
+      display: -webkit-box;
+      -webkit-box-orient: vertical;
+      -webkit-box-pack: justify;
+      flex: 1;
+      -webkit-box-flex: 1;
+      .list-item-title {
+        font-size: 16px;
+        letter-spacing: 1px;
+        color: #000;
+      }
+      .list-item-type {
+        display: -webkit-box;
+        -webkit-box-pack: justify;
+        font-size: 12px;
+        color: #666;
+        label {
+          display: block
+        }
+      }
+    }
+  }
 }
